tests/ui/pattern/non-structural-match-types.stderr
error: constant of non-structural type `Option<fn() {uwu}>` in a pattern
  --> $DIR/non-structural-match-types.rs:10:9
   |
LL | impl<T> AnyOption<T> {
   | --------------------
LL |     const NONE: Option<T> = None;
   |     --------------------- constant defined here
...
LL |         AnyOption::<_>::NONE => {}
   |         ^^^^^^^^^^^^^^^^^^^^ constant of non-structural type
   |
   = note: see https://doc.rust-lang.org/stable/std/marker/trait.StructuralPartialEq.html for details

error: constant of non-structural type `Option<{closure@$DIR/non-structural-match-types.rs:15:16: 15:18}>` in a pattern
  --> $DIR/non-structural-match-types.rs:16:9
   |
LL | impl<T> AnyOption<T> {
   | --------------------
LL |     const NONE: Option<T> = None;
   |     --------------------- constant defined here
...
LL |         AnyOption::<_>::NONE => {}
   |         ^^^^^^^^^^^^^^^^^^^^ constant of non-structural type
   |
   = note: see https://doc.rust-lang.org/stable/std/marker/trait.StructuralPartialEq.html for details

error: aborting due to 2 previous errors

